--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -102,7 +102,7 @@ span a:hover{
 }
 /* header section  */
 .background_img {
-   background: url('/imags/a2.jpg');
+   background: url('../imags/a2.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
